newest_test/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-demo1
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollout-demo
  template:
    metadata:
      labels:
        app: rollout-demo
    spec:
      containers:
      - name: rollout-demo
        image: docker.io/opsmxdev/issuegen:v3.0.8
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    blueGreen: 
      activeService: rollout-demo-active
      previewService: rollout-demo-preview
      autoPromotionSeconds: 30
      prePromotionAnalysis:
        templates:
        - templateName: job-analysis-new
        args:
        - name: baseline-hash
          valueFrom:
            podTemplateHashValue: Stable
        - name: preview-hash
          valueFrom:
            podTemplateHashValue: Latest
      autoPromotionEnabled: false
      postPromotionAnalysis:
        templates:
        - templateName: job-analysis-new
        args:
        - name: baseline-hash
          valueFrom:
            podTemplateHashValue: Stable
        - name: preview-hash
          valueFrom:
            podTemplateHashValue: Latest
