newest_test/rollout2.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-demo2
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollout-demo
  template:
    metadata:
      labels:
        app: rollout-demo
    spec:
      containers:
      - name: rollout-demo
        image: docker.io/opsmxdev/issuegen:v3.0.5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    blueGreen: 
      activeService: rollout-demo-active
      previewService: rollout-demo-preview
      autoPromotionSeconds: 30
      autoPromotionEnabled: false
